crates/rome_formatter/tests/specs/prettier/record/syntax.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: syntax.js

---
# Input
```js
#{}
#{ a: 1, b: 2 }
#{ a: 1, b: #[2, 3, #{ c: 4 }] }

```

# Output
```js
#
{}

#
{ a: 1, b: 2 }
#{ a: 1, b: #[2, 3, #{ c: 4 }] }

```

# Errors
```
error: expected `!` following a `#`, but found none
  ┌─ syntax.js:1:1
  │
1 │ #{}
  │ ^

error[SyntaxError]: expected a statement but instead found '#'
  ┌─ syntax.js:1:1
  │
1 │ #{}
  │ ^ Expected a statement here

error[SyntaxError]: expected `IDENT` but instead found `{`
  ┌─ syntax.js:2:2
  │
2 │ #{ a: 1, b: 2 }
  │  ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ syntax.js:2:11
  │
2 │ #{ a: 1, b: 2 }
  │       ----^
  │       │   │
  │       │   An explicit or implicit semicolon is expected here...
  │       ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ syntax.js:3:11
  │
3 │ #{ a: 1, b: #[2, 3, #{ c: 4 }] }
  │       ----^
  │       │   │
  │       │   An explicit or implicit semicolon is expected here...
  │       ...Which is required to end this statement

error[SyntaxError]: expected a statement but instead found '] }'
  ┌─ syntax.js:3:30
  │
3 │ #{ a: 1, b: #[2, 3, #{ c: 4 }] }
  │                              ^^^ Expected a statement here

error[SyntaxError]: expected `'}'` but instead the file ends
  ┌─ syntax.js:4:1
  │
4 │ 
  │ ^ the file ends here


```


